--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -137,7 +137,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           data="[[data]]"
           data-status="[[dataStatus]]"
           data-g="[[dataGE]]"
-          data-ge-status="[[dataGEStatus]]"
+          data-g-status="[[dataGEStatus]]"
           previous-instance="[[pluginBch]]"
           ge-link="[[geLink]]"
           on-open-dialog="handleOpenDialog"
