--- a/src/pacs-pull/gex-pacs-move.html
+++ b/src/pacs-pull/gex-pacs-move.html
@@ -42,7 +42,7 @@
       }
 
       vaadin-grid-cell-content {
-        background: none!important;
+        background: var(--default-primary-color);
       }
     </style>
 
