--- a/src/pacs-pull/gex-pacs-query.html
+++ b/src/pacs-pull/gex-pacs-query.html
@@ -69,7 +69,7 @@
         width: 840px;
         margin-left: auto;
         margin-right: auto;
-        background-color: #ffffff;
+        color: #ffffff;
       }
 
       @media (max-width: 840px) {
