--- a/src/gex-datastore.html
+++ b/src/gex-datastore.html
@@ -276,7 +276,17 @@
         this.__waitEndPlugin(this.$.API, data, plugin, true)
         .then((result) => {
           this.__formatPlugin(result, this.feed);
+          // compare to know if we are working with latest
+          if (plugin.data.id !== result.data.id) {
+            //
+            console.log(
+              `Discard 'plugin finished' for plugin ${result.data.id}
+              (current plugin: ${plugin.data.id})`);
+            return;
+          }
+
           this.set(`plugin${target}`, result);
+          
         });
       }
 
@@ -303,19 +313,19 @@
           return;
         }
 
-        this[`status${target}`] = 'processing';
-
-        const plugin = this[`plugin${target}`]
+        const plugin = this[`plugin${target}`];
         const responseTargetID = response[0].data.plugin_inst_id;
         const currentTargetID = plugin.data.id;
 
         if (responseTargetID !== currentTargetID) {
           //
           console.log(
-            `Discard response for plugin ${responseTargetID}
+            `Discard 'files response' for plugin ${responseTargetID}
             (current plugin: ${currentTargetID})`);
           return;
         }
+
+        this[`status${target}`] = 'processing';
 
         const files = [];
         for (const file of response) {
