--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -44,11 +44,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
       :host {
         --dark-primary-color:       #212121;
-        --default-primary-color:    #424242;
-        --light-primary-color:      #9e9e9e;
+        --default-primary-color:    #303030;
+        --light-primary-color:      #424242;
         --text-primary-color:       #FFFFFF;
         --accent-color:             #CCFF00;
-        --primary-background-color: #212121;
+        --primary-background-color: #424242;
         --primary-text-color:       #FAFAFA; /*212121*/
         --secondary-text-color:     #757575;
         --disabled-text-color:      #BDBDBD;
