--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -6,6 +6,7 @@
 <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
 
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-slider/paper-slider.html">
 
 <link rel="import" href="../bower_components/chips-api/chips-api.html">
 
@@ -91,13 +92,28 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #212121;
-        z-index: 1;
+        background-color: var(--light-primary-color);
+        z-index: 2;
         display: flex;
         align-items: center;
         justify-content: center;
         color: #ffffff;
         flex-direction: column;
+      }
+
+      paper-slider {
+        width: 100%;
+        background-color: #000000;
+        --paper-slider-container-color: #424242;
+        --paper-slider-active-color: #424242;
+        --paper-slider-knob-color: #ccff00;
+        --paper-slider-input: {width: 64px}
+      }
+
+      .viewHead {
+        width: 100%;
+        background-color: var(--light-primary-color);
+        padding: 16px;
       }
 
       [hidden] {
@@ -170,6 +186,7 @@
               </div>
             </div>
           </div>
+          <div class="viewHead"></div>
           <ami-viewer-2d
             id="render"
             class="viewers"
@@ -180,6 +197,13 @@
             stack-orientation="{{stackOrientationIndex}}"
             stack-window-width="[[stackWindowWidth]]"
             stack-window-center="[[stackWindowCenter]]"></ami-viewer-2d>
+          <paper-slider
+            value="{{stackIndex}}"
+            immediate-value="{{stackIndex}}"
+            min="0"
+            max="[[stackMaxIndex]]"
+            editable></paper-slider>
+            
         </div>
         <div class="viewerui" hidden$="[[!_isSelected(dataGSelected)]]">
           <div hidden$="[[!_isLoading('ge', dataSelected, dataGSelected, urlsTotal)]]">
@@ -192,6 +216,7 @@
               </div>
             </div>
           </div>
+          <div class="viewHead"></div>
           <ami-viewer-2d
             id="render2"
             class="viewers"
@@ -202,9 +227,14 @@
             stack-orientation="{{stackOrientationIndexGE}}"
             stack-window-width="[[stackWindowWidthGE]]"
             stack-window-center="[[stackWindowCenterGE]]"></ami-viewer-2d>
+          <paper-slider
+            value="{{stackIndexGE}}"
+            immediate-value="{{stackIndexGE}}"
+            min="0"
+            max="[[stackMaxIndexGE]]"
+            editable></paper-slider>
         </div>
       </div>
-
     </div>
 
     <div hidden$="[[!visibleGE]]" class="panel">
