--- a/src/pacs-pull/gex-pacs-pull.html
+++ b/src/pacs-pull/gex-pacs-pull.html
@@ -4,6 +4,7 @@
 
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
@@ -31,6 +32,15 @@
       iron-pages.content {
         display: flex;
         width: 100%;
+      }
+
+      paper-button {
+        color: var(--primary-text-color);
+      }
+
+      paper-button[disabled] {
+        color: var(--default-primary-color)!important;
+        background-color: var(--dark-primary-color);
       }
     </style>
 
