Consistent conventions between Bch and Ge data.

--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -134,10 +134,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           on-login="handleLogin"></gex-login>
         <gex-home
           name="home"
-          data="[[data]]"
-          data-status="[[dataStatus]]"
-          data-g="[[dataGE]]"
-          data-g-status="[[dataGEStatus]]"
+          data-bch="[[data]]"
+          data-status-bch="[[dataStatus]]"
+          data-ge="[[dataGE]]"
+          data-status-ge="[[dataGEStatus]]"
           previous-instance="[[pluginBch]]"
           ge-link="[[geLink]]"
           on-open-dialog="handleOpenDialog"
